# sy-account-financial-reporting

./: .copier-answers.yml  .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  README.md  test-requirements.txt
.github/workflows/: test.yml
account_financial_report_block_pdf/: README.rst  __init__.py  __manifest__.py
account_financial_report_block_pdf/data/: ir_config_param.xml
account_financial_report_block_pdf/i18n/: ca_ES.po  es.po
account_financial_report_block_pdf/wizard/: __init__.py  abstract_wizard.py  aged_partner_balance_wizard.py  general_ledger_report_wizard.py  journal_ledger_wizard.py  open_items_wizard.py  trial_balance_wizard.py  vat_report_wizard.py
footer_extra_info_account_move/: README.rst  __manifest__.py
footer_extra_info_account_move/models/: __init__.py  account_fiscal_position.py  account_move.py
footer_extra_info_account_move/readme/: CONFIGURE.md  CONTRIBUTORS.md  DESCRIPTION.md
footer_extra_info_account_move/tests/: __init__.py  test_footer_extra_info_account_move.py
footer_extra_info_account_move/views/: account_fiscal_position_views.xml
hide_invoice_shipping_address/: README.rst  __manifest__.py
hide_invoice_shipping_address/i18n/: ca_ES.po  es.po
hide_invoice_shipping_address/models/: __init__.py  account_move.py  res_company.py  res_config_settings.py  res_partner.py
hide_invoice_shipping_address/report/: report_invoice.xml
hide_invoice_shipping_address/views/: account_move_view.xml  (+2 more)
purchase_order_type_dashboard/: README.rst  __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+5 files in other folders)
