[project]
name = "odoo-addons-sygel-technology-sy-account-financial-reporting"
version = "17.0.20241105.0"
dependencies = [
    "odoo-addon-account_financial_report_block_pdf>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
